@@ -1,10 +1,19 @@
 Author: Matthew Good <trac@matt-good.net>
 Maintainer: Steffen Hoffmann <hoff.st@web.de>
 
-acct_mgr-0.5 (not yet released) - branch 0.11
+acct_mgr-0.4.3 (13-Feb-2013) - branch 0.11
  resolved issues
+ * #8927: LoginModule with .htpasswd & passwd reset => not working
+ * #10681: User with empty password can't reset their password
+ * #10765: AttributeError: 'NoneType' object has no attribute 'strip'
+ * #10871: AccountGuard destroys trac.ini
+ * prevent two ways for a user to bypass a forced password change
+ * skip BotTrapCheck on admin user requests, i.e. from inside user admin panel
+ * keep trac.auth.LoginModule options defined after disabling that component
+   by defining all options in acct_mgr.web_ui.LoginModule as well
 
  new features
+ * allow logging-in into password-less accounts via acct_mgr.LoginModule
 
 
 acct_mgr-0.4.2 (27-Dec-2012) - branch 0.11
